--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "lokijs": "^1.5.8",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
